# Vacancies_parcing-Course_4

./: README.md  main.py  pyproject.toml
src/classes/: APIs.py  savers.py  vacancies.py  vacancy.py
src/utils/: user_interaction.py  utils.py
