[tool.poetry]
name = "vacancies-parcing-course-4"
version = "0.1.0"
description = ""
authors = ["maxslidzen <slidzon94@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancies_parcing_course_4"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
